--- a/osm.env
+++ b/osm.env
@@ -1,5 +1,5 @@
-OSM_PBF_URL=http://download.geofabrik.de/australia-oceania/australia-latest.osm.pbf
-OSM_PBF_UPDATE_URL=http://download.geofabrik.de/australia-oceania/australia-updates
+OSM_PBF_URL=https://download.geofabrik.de/europe/france-latest.osm.pbf
+OSM_PBF_UPDATE_URL=https://download.geofabrik.de/europe/france-updates/
 POSTGRES_HOST=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=supersecret
@@ -10,3 +10,4 @@ WFS_SLEEP=30
 RENDERD_UPDATE_SLEEP=86400
 OSRM_ALGORITHM=MLD
 DATA_DIR=/data
+NPROCS=6
